==> cvetaevvitaliy/Smart-Power-Case/src/bq27441/bq27441.c <==
#include "bq27441.h"
#define BQ27441_I2C_PORT		hi2c1

bool BQ27441_setCapacity(uint16_t capacity) {
    // Write to STATE subclass (82) of BQ27441 extended memory.
    // Offset 0x0A (10)
    // Design capacity is a 2-byte piece of data - MSB first
    // Unit: mAh
    uint8_t capacityData[2] = {capacity >> 8, capacity & 0x00FF};
    return BQ27441_writeExtendedData(BQ27441_ID_STATE, 10, capacityData, 2);
}

bool BQ27441_setDesignEnergy(uint16_t energy) {
    // Write to STATE subclass (82) of BQ27441 extended memory.
    // Offset 0x0C (12)
    // Design energy is a 2-byte piece of data - MSB first
    // Unit: mWh
    uint8_t energyData[2] = {energy >> 8, energy & 0x00FF};
    return BQ27441_writeExtendedData(BQ27441_ID_STATE, 12, energyData, 2);
}

bool BQ27441_setGPOUTPolarity(bool activeHigh) {
    uint16_t oldOpConfig = BQ27441_opConfig();

    // Check to see if we need to update opConfig:
    if ((activeHigh && (oldOpConfig & BQ27441_OPCONFIG_GPIOPOL)) ||
        (!activeHigh && !(oldOpConfig & BQ27441_OPCONFIG_GPIOPOL)))
        return true;

    uint16_t newOpConfig = oldOpConfig;
    if (activeHigh)
        newOpConfig |= BQ27441_OPCONFIG_GPIOPOL;
    else
        newOpConfig &= ~(BQ27441_OPCONFIG_GPIOPOL);

    return BQ27441_writeOpConfig(newOpConfig);
}

bool BQ27441_setGPOUTFunction(gpout_function function) {
    uint16_t oldOpConfig = BQ27441_opConfig();

    // Check to see if we need to update opConfig:
    if ((function && (oldOpConfig & BQ27441_OPCONFIG_BATLOWEN)) ||
        (!function && !(oldOpConfig & BQ27441_OPCONFIG_BATLOWEN)))
        return true;

    // Modify BATLOWN_EN bit of opConfig:
    uint16_t newOpConfig = oldOpConfig;
    if (function)
        newOpConfig |= BQ27441_OPCONFIG_BATLOWEN;
    else
        newOpConfig &= ~(BQ27441_OPCONFIG_BATLOWEN);

    // Write new opConfig
    return BQ27441_writeOpConfig(newOpConfig);
}

uint8_t BQ27441_SOC1SetThreshold(void)
{
    return BQ27441_readExtendedData(BQ27441_ID_DISCHARGE, 0);
}

uint8_t BQ27441_SOC1ClearThreshold(void)
{
    return BQ27441_readExtendedData(BQ27441_ID_DISCHARGE, 1);
}

bool BQ27441_setSOC1Thresholds(uint8_t set, uint8_t clear)
{
    uint8_t thresholds[2];
    thresholds[0] = constrain(set, 0, 100);
    thresholds[1] = constrain(clear, 0, 100);
    return BQ27441_writeExtendedData(BQ27441_ID_DISCHARGE, 0, thresholds, 2);
}

uint8_t BQ27441_SOCFSetThreshold(void)
{
    return BQ27441_readExtendedData(BQ27441_ID_DISCHARGE, 2);
}

uint8_t BQ27441_SOCFClearThreshold(void)
{
    return BQ27441_readExtendedData(BQ27441_ID_DISCHARGE, 3);
}

bool BQ27441_setSOCFThresholds(uint8_t set, uint8_t clear)
{
    uint8_t thresholds[2];
    thresholds[0] = constrain(set, 0, 100);
    thresholds[1] = constrain(clear, 0, 100);
    return BQ27441_writeExtendedData(BQ27441_ID_DISCHARGE, 2, thresholds, 2);
}

uint8_t BQ27441_sociDelta(void)
{
    return BQ27441_readExtendedData(BQ27441_ID_STATE, 26);
}

bool BQ27441_setSOCIDelta(uint8_t delta)
{
    uint8_t soci = constrain(delta, 0, 100);
    return BQ27441_writeExtendedData(BQ27441_ID_STATE, 26, &soci, 1);
}

bool BQ27441_pulseGPOUT(void)
{
    return BQ27441_executeControlWord(BQ27441_CONTROL_PULSE_SOC_INT);
}

uint16_t BQ27441_deviceType(void)
{
    return BQ27441_readControlWord(BQ27441_CONTROL_DEVICE_TYPE);
}

bool BQ27441_enterConfig(bool userControl) {

    if (userControl) {
        userConfigControl = true;

        if (BQ27441_sealed()) {
            sealFlag = true;
            BQ27441_unseal(); // Must be unsealed before making changes
        }

        if (BQ27441_executeControlWord(BQ27441_CONTROL_SET_CFGUPDATE)) {
            int16_t timeout = BQ72441_I2C_TIMEOUT;
            while ((timeout--) && (!(BQ27441_flags() & BQ27441_FLAG_CFGUPMODE)))
                HAL_Delay(10);

            if (timeout > 0)
                return true;
        } else
            return false;
    } else
        return false;
}

bool BQ27441_exitConfig(bool resim) {

    //resim = true;
    // There are two methods for exiting config mode:
    //    1. Execute the EXIT_CFGUPDATE command
    //    2. Execute the SOFT_RESET command
    // EXIT_CFGUPDATE exits config mode _without_ an OCV (open-circuit voltage)
    // measurement, and without resimulating to update unfiltered-SoC and SoC.
    // If a new OCV measurement or resimulation is desired, SOFT_RESET or
    // EXIT_RESIM should be used to exit config mode.
    if (resim) {
        if (BQ27441_softReset()) {
            int16_t timeout = BQ72441_I2C_TIMEOUT;
            while ((timeout--) && ((BQ27441_flags() & BQ27441_FLAG_CFGUPMODE)))
                HAL_Delay(1);
            if (timeout > 0) {
                if (sealFlag) BQ27441_seal(); // Seal back up if we IC was sealed coming in
                return true;
            }
        }
        return false;
    } else {
        return BQ27441_executeControlWord(BQ27441_CONTROL_EXIT_CFGUPDATE);
    }
}

static uint16_t BQ27441_opConfig(void) {
    return BQ27441_readWord(BQ27441_EXTENDED_OPCONFIG);
}

static bool BQ27441_writeOpConfig(uint16_t value) {

    uint8_t opConfigData[2] = {value >> 8, value & 0x00FF};

    // OpConfig register location: BQ27441_ID_REGISTERS id, offset 0
    return BQ27441_writeExtendedData(BQ27441_ID_REGISTERS, 0, opConfigData, 2);
}

bool BQ27441_softReset(void) {
    return BQ27441_executeControlWord(BQ27441_CONTROL_SOFT_RESET);
}

static uint16_t BQ27441_readWord(uint16_t subAddress) {
    uint8_t data[2];
    BQ27441_i2cReadBytes(subAddress, data, 2);
    return ((uint16_t) data[1] << 8) | data[0];
}

static uint16_t BQ27441_readControlWord(uint16_t function) {

    uint8_t command[2] = {function & 0x00FF, function >> 8};
    uint8_t data[2] = {0, 0};

    BQ27441_i2cWriteBytes((uint8_t) 0, command, 2);

    if (BQ27441_i2cReadBytes((uint8_t) 0, data, 2)) {
        return ((uint16_t) data[1] << 8) | data[0];
    }

    return false;
}

static bool BQ27441_executeControlWord(uint16_t function) {

    uint8_t command[2] = {function & 0x00FF, function >> 8};

    if (BQ27441_i2cWriteBytes((uint8_t) 0, command, 2))
        return true;

    return false;
}

static bool BQ27441_blockDataControl(void)
{
    uint8_t enableByte = 0x00;
    return BQ27441_i2cWriteBytes(BQ27441_EXTENDED_CONTROL, &enableByte, 1);
}

static bool BQ27441_blockDataClass(uint8_t id)
{
    return BQ27441_i2cWriteBytes(BQ27441_EXTENDED_DATACLASS, &id, 1);
}

static bool BQ27441_blockDataOffset(uint8_t offset)
{
    return BQ27441_i2cWriteBytes(BQ27441_EXTENDED_DATABLOCK, &offset, 1);
}

static uint8_t BQ27441_blockDataChecksum(void)
{
    uint8_t csum;
    BQ27441_i2cReadBytes(BQ27441_EXTENDED_CHECKSUM, &csum, 1);
    return csum;
}

static uint8_t BQ27441_readBlockData(uint8_t offset)
{
    uint8_t ret;
    uint8_t address = offset + BQ27441_EXTENDED_BLOCKDATA;
    BQ27441_i2cReadBytes(address, &ret, 1);
    return ret;
}

static bool BQ27441_writeBlockData(uint8_t offset, uint8_t data)
{
    uint8_t address = offset + BQ27441_EXTENDED_BLOCKDATA;
    return BQ27441_i2cWriteBytes(address, &data, 1);
}

static uint8_t BQ27441_computeBlockChecksum(void)
{
    uint8_t data[32];
    BQ27441_i2cReadBytes(BQ27441_EXTENDED_BLOCKDATA, data, 32);

    uint8_t csum = 0;
    for (uint8_t i = 0; i < 32; i++) {
        csum += data[i];
    }
    csum = 255 - csum;

    return csum;
}

static bool BQ27441_writeBlockChecksum(uint8_t csum)
{
    return BQ27441_i2cWriteBytes(BQ27441_EXTENDED_CHECKSUM, &csum, 1);
}

static uint8_t BQ27441_readExtendedData(uint8_t classID, uint8_t offset) {
    uint8_t retData = 0;
    if (!userConfigControl) BQ27441_enterConfig(false);

    if (!BQ27441_blockDataControl()) // // enable block data memory control
        return false; // Return false if enable fails
    if (!BQ27441_blockDataClass(classID)) // Write class ID using DataBlockClass()
        return false;

    BQ27441_blockDataOffset(offset / 32); // Write 32-bit block offset (usually 0)

    BQ27441_computeBlockChecksum(); // Compute checksum going in
    uint8_t oldCsum = BQ27441_blockDataChecksum();
    retData = BQ27441_readBlockData(offset % 32); // Read from offset (limit to 0-31)

    if (!userConfigControl) BQ27441_exitConfig(true);

    return retData;
}

static bool BQ27441_writeExtendedData(uint8_t classID, uint8_t offset, uint8_t * data, uint8_t len) {
    if (len > 32)
        return false;

    if (!userConfigControl) BQ27441_enterConfig(false);

    if (!BQ27441_blockDataControl()) // // enable block data memory control
        return false; // Return false if enable fails
    if (!BQ27441_blockDataClass(classID)) // Write class ID using DataBlockClass()
        return false;

    BQ27441_blockDataOffset(offset / 32); // Write 32-bit block offset (usually 0)
    BQ27441_computeBlockChecksum(); // Compute checksum going in
    uint8_t oldCsum = BQ27441_blockDataChecksum();

    // Write data bytes:
    for (int i = 0; i < len; i++) {
        // Write to offset, mod 32 if offset is greater than 32
        // The blockDataOffset above sets the 32-bit block
        BQ27441_writeBlockData((offset % 32) + i, data[i]);
    }

    // Write new checksum using BlockDataChecksum (0x60)
    uint8_t newCsum = BQ27441_computeBlockChecksum(); // Compute the new checksum
    BQ27441_writeBlockChecksum(newCsum);

    if (!userConfigControl) BQ27441_exitConfig(true);

    return true;
}

static int16_t BQ27441_i2cReadBytes(uint8_t subAddress, uint8_t * dest, uint8_t count)
{
    int16_t timeout = BQ72441_I2C_TIMEOUT;

#ifdef USE_DMA_BQ27441
    while(HAL_I2C_GetState(&BQ27441_I2C_PORT) != HAL_I2C_STATE_READY);
    HAL_I2C_Mem_Read_DMA(&BQ27441_I2C_PORT, (BQ72441_I2C_ADDRESS << 1), subAddress, 1, dest, count);
#else
    HAL_I2C_Mem_Read(&BQ27441_I2C_PORT, (BQ72441_I2C_ADDRESS << 1), subAddress, 1, dest, count, 50);
#endif

    return true;
}

static uint16_t BQ27441_i2cWriteBytes(uint8_t subAddress, uint8_t * src, uint8_t count)
{

#ifdef USE_DMA_BQ27441
    while(HAL_I2C_GetState(&BQ27441_I2C_PORT) != HAL_I2C_STATE_READY);
    (HAL_I2C_Mem_Write_DMA(&BQ27441_I2C_PORT, (BQ72441_I2C_ADDRESS << 1), subAddress, 1, src, count);
#else
    HAL_I2C_Mem_Write(&BQ27441_I2C_PORT, (BQ72441_I2C_ADDRESS << 1), subAddress, 1, src, count, 50);
#endif
    return true;
}
