==> Foyceek/ESP32-Wi-Fi-sniffer/ESP-IDF/BAP/main/bq27441.c <==
#include "bq27441.h"
#include "bq27441_constants.h"
#include "esp_log.h"
#define constrain(amt,low,high) ((amt)<(low)?(low):((amt)>(high)?(high):(amt)))
#define vTaskPoll() vTaskDelay(1 / portTICK_PERIOD_MS);

bool bq27441SetCapacity(uint16_t capacity)
{
    // Write to STATE subclass (82) of BQ27441 extended memory.
    // Offset 0x0A (10)
    // Design capacity is a 2-byte piece of data - MSB first
    // Unit: mAh
    uint8_t capMSB = capacity >> 8;
    uint8_t capLSB = capacity & 0x00FF;
    uint8_t capacityData[2] = {capMSB, capLSB};
    return bq27441WriteExtendedData(BQ27441_ID_STATE, 10, capacityData, 2);
}

bool bq27441SetDesignEnergy(uint16_t energy)
{
    // Write to STATE subclass (82) of BQ27441 extended memory.
    // Offset 0x0C (12)
    // Design energy is a 2-byte piece of data - MSB first
    // Unit: mWh
    uint8_t enMSB = energy >> 8;
    uint8_t enLSB = energy & 0x00FF;
    uint8_t energyData[2] = {enMSB, enLSB};
    return bq27441WriteExtendedData(BQ27441_ID_STATE, 12, energyData, 2);
}

bool bq27441SetGPOUTPolarity(bool activeHigh)
{
    uint16_t oldOpConfig = bq27441OpConfig();

    // Check to see if we need to update opConfig:
    if ((activeHigh && (oldOpConfig & BQ27441_OPCONFIG_GPIOPOL)) ||
            (!activeHigh && !(oldOpConfig & BQ27441_OPCONFIG_GPIOPOL)))
        return true;

    uint16_t newOpConfig = oldOpConfig;
    if (activeHigh)
        newOpConfig |= BQ27441_OPCONFIG_GPIOPOL;
    else
        newOpConfig &= ~(BQ27441_OPCONFIG_GPIOPOL);

    return bq27441WriteOpConfig(newOpConfig);
}

bool bq27441SetGPOUTFunction(gpout_function function)
{
    uint16_t oldOpConfig = bq27441OpConfig();

    // Check to see if we need to update opConfig:
    if ((function && (oldOpConfig & BQ27441_OPCONFIG_BATLOWEN)) ||
            (!function && !(oldOpConfig & BQ27441_OPCONFIG_BATLOWEN)))
        return true;

    // Modify BATLOWN_EN bit of opConfig:
    uint16_t newOpConfig = oldOpConfig;
    if (function)
        newOpConfig |= BQ27441_OPCONFIG_BATLOWEN;
    else
        newOpConfig &= ~(BQ27441_OPCONFIG_BATLOWEN);

    // Write new opConfig
    return bq27441WriteOpConfig(newOpConfig);
}

uint8_t bq27441SOC1SetThreshold(void)
{
    return bq27441ReadExtendedData(BQ27441_ID_DISCHARGE, 0);
}

uint8_t bq27441SOC1ClearThreshold(void)
{
    return bq27441ReadExtendedData(BQ27441_ID_DISCHARGE, 1);
}

bool bq27441SetSOC1Thresholds(uint8_t set, uint8_t clear)
{
    uint8_t thresholds[2];
    thresholds[0] = constrain(set, 0, 100);
    thresholds[1] = constrain(clear, 0, 100);
    return bq27441WriteExtendedData(BQ27441_ID_DISCHARGE, 0, thresholds, 2);
}

uint8_t bq27441SOCFSetThreshold(void)
{
    return bq27441ReadExtendedData(BQ27441_ID_DISCHARGE, 2);
}

uint8_t bq27441SOCFClearThreshold(void)
{
    return bq27441ReadExtendedData(BQ27441_ID_DISCHARGE, 3);
}

bool bq27441SetSOCFThresholds(uint8_t set, uint8_t clear)
{
    uint8_t thresholds[2];
    thresholds[0] = constrain(set, 0, 100);
    thresholds[1] = constrain(clear, 0, 100);
    return bq27441WriteExtendedData(BQ27441_ID_DISCHARGE, 2, thresholds, 2);
}

uint8_t bq27441SociDelta(void)
{
    return bq27441ReadExtendedData(BQ27441_ID_STATE, 26);
}

bool bq27441SetSOCIDelta(uint8_t delta)
{
    uint8_t soci = constrain(delta, 0, 100);
    return bq27441WriteExtendedData(BQ27441_ID_STATE, 26, &soci, 1);
}

bool bq27441PulseGPOUT(void)
{
    return bq27441ExecuteControlWord(BQ27441_CONTROL_PULSE_SOC_INT);
}

uint16_t bq27441DeviceType(void)
{
    return bq27441ReadControlWord(BQ27441_CONTROL_DEVICE_TYPE);
}

bool bq27441EnterConfig(bool userControl)
{
    if (userControl) _userConfigControl = true;

    if (bq27441Sealed())
    {
        _sealFlag = true;
        bq27441Unseal(); // Must be unsealed before making changes
    }

    if (bq27441ExecuteControlWord(BQ27441_CONTROL_SET_CFGUPDATE))
    {
        int16_t timeout = BQ72441_I2C_TIMEOUT;
        while ((timeout--) && (!(bq27441Flags() & BQ27441_FLAG_CFGUPMODE)))
            vTaskPoll();

        if (timeout > 0)
            return true;
    }

    return false;
}

bool bq27441ExitConfig(bool resim)
{
    // There are two methods for exiting config mode:
    //    1. Execute the EXIT_CFGUPDATE command
    //    2. Execute the SOFT_RESET command
    // EXIT_CFGUPDATE exits config mode _without_ an OCV (open-circuit voltage)
    // measurement, and without resimulating to update unfiltered-SoC and SoC.
    // If a new OCV measurement or resimulation is desired, SOFT_RESET or
    // EXIT_RESIM should be used to exit config mode.
    if (resim)
    {
        if (bq27441SoftReset())
        {
            int16_t timeout = BQ72441_I2C_TIMEOUT;
            while ((timeout--) && ((bq27441Flags() & BQ27441_FLAG_CFGUPMODE)))
                vTaskPoll();

            if (timeout > 0)
            {
                if (_sealFlag) bq27441Seal(); // Seal back up if we IC was sealed coming in
                return true;
            }
        }
        return false;
    }
    else
    {
        return bq27441ExecuteControlWord(BQ27441_CONTROL_EXIT_CFGUPDATE);
    }
}

uint16_t bq27441OpConfig(void)
{
    return bq27441ReadWord(BQ27441_EXTENDED_OPCONFIG);
}

bool bq27441WriteOpConfig(uint16_t value)
{
    uint8_t opConfigMSB = value >> 8;
    uint8_t opConfigLSB = value & 0x00FF;
    uint8_t opConfigData[2] = {opConfigMSB, opConfigLSB};

    // OpConfig register location: BQ27441_ID_REGISTERS id, offset 0
    return bq27441WriteExtendedData(BQ27441_ID_REGISTERS, 0, opConfigData, 2);
}

bool bq27441SoftReset(void)
{
    return bq27441ExecuteControlWord(BQ27441_CONTROL_SOFT_RESET);
}

uint16_t bq27441ReadWord(uint16_t subAddress)
{
    uint8_t data[2];
    bq27441I2cReadBytes(subAddress, data, 2);
    return ((uint16_t) data[1] << 8) | data[0];
}

uint16_t bq27441ReadControlWord(uint16_t function)
{
    uint8_t subCommandMSB = (function >> 8);
    uint8_t subCommandLSB = (function & 0x00FF);
    uint8_t command[2] = {subCommandLSB, subCommandMSB};
    uint8_t data[2] = {0, 0};

    bq27441I2cWriteBytes((uint8_t) 0, command, 2);

    if (bq27441I2cReadBytes((uint8_t) 0, data, 2))
    {
        return ((uint16_t)data[1] << 8) | data[0];
    }

    return false;
}

bool bq27441ExecuteControlWord(uint16_t function)
{
    uint8_t subCommandMSB = (function >> 8);
    uint8_t subCommandLSB = (function & 0x00FF);
    uint8_t command[2] = {subCommandLSB, subCommandMSB};
    uint8_t data[2] = {0, 0};

    if (bq27441I2cWriteBytes((uint8_t) 0, command, 2))
        return true;

    return false;
}

bool bq27441BlockDataControl(void)
{
    uint8_t enableByte = 0x00;
    return bq27441I2cWriteBytes(BQ27441_EXTENDED_CONTROL, &enableByte, 1);
}

bool bq27441BlockDataClass(uint8_t id)
{
    return bq27441I2cWriteBytes(BQ27441_EXTENDED_DATACLASS, &id, 1);
}

bool bq27441BlockDataOffset(uint8_t offset)
{
    return bq27441I2cWriteBytes(BQ27441_EXTENDED_DATABLOCK, &offset, 1);
}

uint8_t bq27441BlockDataChecksum(void)
{
    uint8_t csum;
    bq27441I2cReadBytes(BQ27441_EXTENDED_CHECKSUM, &csum, 1);
    return csum;
}

uint8_t bq27441ReadBlockData(uint8_t offset)
{
    uint8_t ret;
    uint8_t address = offset + BQ27441_EXTENDED_BLOCKDATA;
    bq27441I2cReadBytes(address, &ret, 1);
    return ret;
}

bool bq27441WriteBlockData(uint8_t offset, uint8_t data)
{
    uint8_t address = offset + BQ27441_EXTENDED_BLOCKDATA;
    return bq27441I2cWriteBytes(address, &data, 1);
}

uint8_t bq27441ComputeBlockChecksum(void)
{
    uint8_t data[32];
    bq27441I2cReadBytes(BQ27441_EXTENDED_BLOCKDATA, data, 32);

    uint8_t csum = 0;
    for (int i=0; i<32; i++)
    {
        csum += data[i];
    }
    csum = 255 - csum;

    return csum;
}

bool bq27441WriteBlockChecksum(uint8_t csum)
{
    return bq27441I2cWriteBytes(BQ27441_EXTENDED_CHECKSUM, &csum, 1);
}

uint8_t bq27441ReadExtendedData(uint8_t classID, uint8_t offset)
{
    uint8_t retData = 0;
    if (!_userConfigControl) bq27441EnterConfig(false);

    if (!bq27441BlockDataControl()) // // enable block data memory control
        return false; // Return false if enable fails
    if (!bq27441BlockDataClass(classID)) // Write class ID using DataBlockClass()
        return false;

    bq27441BlockDataOffset(offset / 32); // Write 32-bit block offset (usually 0)

    bq27441ComputeBlockChecksum(); // Compute checksum going in
    uint8_t oldCsum = bq27441BlockDataChecksum();
    /*for (int i=0; i<32; i++)
    	Serial.print(String(readBlockData(i)) + " ");*/
    retData = bq27441ReadBlockData(offset % 32); // Read from offset (limit to 0-31)

    if (!_userConfigControl) bq27441ExitConfig(false);

    return retData;
}

bool bq27441WriteExtendedData(uint8_t classID, uint8_t offset, uint8_t * data, uint8_t len)
{
    if (len > 32)
        return false;

    if (!_userConfigControl) bq27441EnterConfig(false);

    if (!bq27441BlockDataControl()) // // enable block data memory control
        return false; // Return false if enable fails
    if (!bq27441BlockDataClass(classID)) // Write class ID using DataBlockClass()
        return false;

    bq27441BlockDataOffset(offset / 32); // Write 32-bit block offset (usually 0)
    bq27441ComputeBlockChecksum(); // Compute checksum going in
    uint8_t oldCsum = bq27441BlockDataChecksum();

    // Write data bytes:
    for (int i = 0; i < len; i++)
    {
        // Write to offset, mod 32 if offset is greater than 32
        // The blockDataOffset above sets the 32-bit block
        bq27441WriteBlockData((offset % 32) + i, data[i]);
    }

    // Write new checksum using BlockDataChecksum (0x60)
    uint8_t newCsum = bq27441ComputeBlockChecksum(); // Compute the new checksum
    bq27441WriteBlockChecksum(newCsum);

    if (!_userConfigControl) bq27441ExitConfig(true);

    return true;
}

int16_t bq27441I2cReadBytes(uint8_t subAddress, uint8_t * dest, uint8_t count)
{
    i2c_cmd_handle_t cmd = i2c_cmd_link_create();
    i2c_master_start(cmd);
    i2c_master_write_byte(cmd, (BQ27441_I2C_ADDRESS << 1) | I2C_MASTER_WRITE, ACK_CHECK_EN);
    i2c_master_write_byte(cmd, subAddress, ACK_CHECK_EN);
    i2c_master_start(cmd);
    i2c_master_write_byte(cmd, (BQ27441_I2C_ADDRESS << 1) | I2C_MASTER_READ, ACK_CHECK_EN);
    if (count > 1)
    {
        i2c_master_read(cmd, dest, count - 1, ACK_VAL);
    }
    i2c_master_read_byte(cmd, dest + count - 1, NACK_VAL);
    i2c_master_stop(cmd);

    esp_err_t ret = i2c_master_cmd_begin(_port_num, cmd, 200 / portTICK_PERIOD_MS);
    i2c_cmd_link_delete(cmd);

    if(ret == ESP_OK)
        return true;
    else
        return false;
}

uint16_t bq27441I2cWriteBytes(uint8_t subAddress, uint8_t * src, uint8_t count)
{
    // We write data incrementally
    // According to the datasheet this is only ok for f_scl up to 100khz
    // 66us idle time is required between commands
    // this seems to be built in and there are no communication problems
    // if needed in future could use eta_delay_us to busy wait for 66us

    i2c_cmd_handle_t cmd = i2c_cmd_link_create();
    i2c_master_start(cmd);
    i2c_master_write_byte(cmd, (BQ27441_I2C_ADDRESS << 1) | I2C_MASTER_WRITE, ACK_CHECK_EN);
    i2c_master_write_byte(cmd, subAddress, ACK_CHECK_EN);
    for(int i = 0; i < count; i++)
    {
        i2c_master_write_byte(cmd, src[i], ACK_CHECK_EN);
    }
    i2c_master_stop(cmd);
    esp_err_t ret = i2c_master_cmd_begin(_port_num, cmd, 1000 / portTICK_PERIOD_MS);
    i2c_cmd_link_delete(cmd);
    return true;
}
